# wedding-backend

./: .gitignore  Dockerfile  app.py  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt  setup.py  wsgi.py
.github/workflows/: main.yml  release.yaml
conf/: nginx.conf
migrations/versions/: 326b894ec98b_invitation_users.py  5ebbc7a9f90f_add_shared_room_flag.py  7de94907eadc_initial_creation.py  84ab841732d1_add_guest_type.py  908f0b6ec2a2_move_plus_one_from_invitation_to_guest.py  99ed743aeaa0_add_password_recovery.py  9a556647d355_add_names_to_users.py  9b7283618a15_add_menu_options.py  a1164d0428ba_adding_guest_details.py  a503d83d34c7_adding_email_verification.py  ba2d26e74d6b_remove_relationship_between_user_and_.py  c3befb2c9f73_add_token_table_for_jwts.py  d187d1815e46_add_arriving_dates.py  deb5a752f071_add_ig_payment.py  f2c307c22f21_add_guests_to_invitation_group.py  f3ca19c993d1_staying_in_house_option.py
wedding/: app.py  auth.py  config.py  group.py  guest.py  menu.py  models.py  user.py  utils.py
wedding/blueprints/: __init__.py  auth.py  group.py  user.py
wedding/dto/: __init__.py  authdto.py  groupdto.py  userdto.py
wedding/specs/: api.yml
