[tool.poetry]
name = "wedding-backend"
version = "0.1.0"
description = "Backend API Server for Wedding Backend"
authors = ["Sam Sherar <sbsherar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
sqlalchemy = "^1.3.16"
flask-sqlalchemy = "^2.4.1"
flask-bcrypt = "^0.7.1"
connexion = "^2.7.0"
pyjwt = "^1.7.1"
boto3 = "^1.13.7"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
black = "^19.10b0"
